# WindowsFontTuner

./: .gitattributes  .gitignore  AppShellForm.cs  FontPackage.cs  FontPreset.cs  FontTunerService.cs  MainForm.cs  ModernControls.cs  Program.cs  README.md  UpdateService.cs  WindowsFontTuner.csproj  app.manifest  build.bat  version.json  使用说明.txt  字体授权说明.md
FontPackages/: catalog.json
FontPackages/harmonyos-sc/: SOURCE.txt
FontPackages/sarasa-ui-sc/: SOURCE.txt
FontPackages/source-han-sans-cn/: SOURCE.txt
Presets/: HarmonyOSUnified.json  SarasaUiScUnified.json  SourceHanSansCnUnified.json
Properties/: AssemblyInfo.cs
WindowsFontTuner2/: README.md  package-lock.json  package.json
WindowsFontTuner2/scripts/: generate-icons.ps1
WindowsFontTuner2/src/: App.tsx  styles.css  types.ts
WindowsFontTuner2/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
WindowsFontTuner2/src-tauri/capabilities/: default.json
WindowsFontTuner2/src-tauri/src/: lib.rs  main.rs  models.rs  preset_data.rs  system.rs
WindowsFontTuner2/src/lib/: presets.ts  tauri.ts
installer/: Install-App.ps1  Uninstall-App.ps1
scripts/: Build-Packages.ps1  Generate-AppIcon.ps1  Publish-Release.ps1
